# accountsservice

./: .gitignore  AUTHORS  INSTALL  Makefile.am  NEWS  TODO  autogen.sh  configure.ac
data/: Makefile.am  accounts-daemon.service.in  org.freedesktop.Accounts.User.xml  org.freedesktop.Accounts.service.in  org.freedesktop.Accounts.xml  org.freedesktop.accounts.policy.in
doc/: Makefile.am
doc/dbus/: AccountsService.xml.in  Makefile.am  spec-to-docbook.xsl
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  accounts-service.pot  ar.po  bg_BG.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  fa_IR.po  fi.po  fr.po  ga.po  gl.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  nl.po  pa.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  (+10 more)
src/: Makefile.am  accounts-daemon.h  daemon.c  daemon.h  main.c  types.h  user.c  user.h  util.c  util.h
src/libaccountsservice/: Makefile.am  accountsservice.pc.in  act-types.h  act-user-manager.c  act-user-manager.h  act-user-private.h  act-user-utils.c  act-user-utils.h  act-user.c  act-user.h
